# imdb-project

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: ea-2.ipynb  exploratory-analysis.ipynb
src/: load_data.py
