[project]
name = "imdb-project"
version = "0.1.0"
description = "GCash DSAI Project - IMDb Analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pyarrow",
    "polars",
    "pyspark",
    "dask",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "jupyter",
    "numpy",
    "scipy",
    "nltk",
    "os"
]